--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         Quanti vaccini vengono fatti al giorno?
                     </a>
                 <div class="descrizione corpo">
-                    In questa scheda è possibile approfondire l'andamento delle somministrazioni giornaliere della prima e della seconda dose di vaccino e il tempo necessario al raggiungimento dell'immunità di greggie (70% della popolazione italiana: 42,25 Milioni). Il tempo
+                    In questa scheda è possibile approfondire l'andamento delle somministrazioni giornaliere della prima e della seconda dose di vaccino e il tempo necessario al raggiungimento dell'immunità di gregge (70% della popolazione italiana: 42,25 Milioni). Il tempo
                     stimato è calcolato sulla base della media mobile delle somministrazioni effettuate negli ultimi 7 giorni.
                 </div>
 
