--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -56,6 +56,23 @@
         }
     </script>
 
+    <!-- Header -->
+
+    <div class="header d-flex justify-content-between">
+        <div class="logo-wired">
+            <a class="logo-wired" href="https://www.wired.it/" target="blank">
+                <img src="./assets/Logo_wired.svg" alt="Logo">
+            </a>
+        </div>
+
+        <div class="icone-share">
+            <img class="icon facebook facebook-share" data-js="facebook-share" src="./assets/share/icon_facebook.svg" width="30px">
+            <img class="icon twitter twitter-share" data-js="twitter-share" src="./assets/share/icon_twitter.svg" width="30px">
+            <img class="icon linkedin linkedin-share" data-js="linkedin-share" src="./assets/share/icon_linkedin.svg" width="30px">
+            <img class="icon mail mail-share" data-js="mail-share" src="./assets/share/icon_mail.svg" width="30px">
+            <img class="icon telegram telegram-share" data-js="telegram-share" src="./assets/share/icon_telegram.svg" width="30px">
+        </div>
+    </div>
 
     <!-- Site -->
     <div class="row">
@@ -127,17 +144,18 @@
             </a>
         </div>
 
-        <a class="sito-hdm corpo bold" href="https://www.h-dm.it/it/" target="blank">
-              Visita il nostro sito →
-            </a>
-
         <div class="credits corpo">
-            <span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana
+            Visita il nostro sito:<br>
+            <a class="sito-hdm corpo bold" href="https://www.h-dm.it/it/" target="blank">
+            www.h-dm.it
+            </a>
         </div>
 
         <div class="credits corpo">
+            <span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
             <span style="font-weight: bold;">Data Visualization Designers:</span> Annalaura Cannavò, Alessia Musio
         </div>
+
     </div>
 
 
