--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="header d-flex justify-content-between">
         <div class="logo-wired">
             <a class="logo-wired" href="https://www.wired.it/" target="blank">
-                <img src="./assets/Logo_wired.svg" alt="Logo">
+                <img src="./assets/Logo_wired.svg" alt="Logo"><span class="it">.it</span>
             </a>
         </div>
 
@@ -69,8 +69,8 @@
             <img class="icon facebook facebook-share" data-js="facebook-share" src="./assets/share/icon_facebook.svg" width="30px">
             <img class="icon twitter twitter-share" data-js="twitter-share" src="./assets/share/icon_twitter.svg" width="30px">
             <img class="icon linkedin linkedin-share" data-js="linkedin-share" src="./assets/share/icon_linkedin.svg" width="30px">
-            <img class="icon mail mail-share" data-js="mail-share" src="./assets/share/icon_mail.svg" width="30px">
             <img class="icon telegram telegram-share" data-js="telegram-share" src="./assets/share/icon_telegram.svg" width="30px">
+            <img class="icon mail mail-share" data-js="mail-share" src="./assets/share/icon_mail.svg" width="30px">
         </div>
     </div>
 
@@ -141,24 +141,24 @@
     </div>
 
     <div class="footer">
-        <div class="logo-hdm">
-            <a class="logo-hdm" href="https://www.h-dm.it/it/" target="blank">
-                <img src="./assets/Logo_HDM.svg" alt="Logo">
-            </a>
-        </div>
+        <div class="logo-sito">
+            <div class="logo-hdm">
+                <a class="logo-hdm" href="https://www.h-dm.it/it/" target="blank">
+                    <img src="./assets/Logo_HDM.svg" alt="Logo">
+                </a>
+            </div>
 
-        <div class="credits corpo">
-            Visita il nostro sito:<br>
-            <a class="sito-hdm corpo bold" href="https://www.h-dm.it/it/" target="blank">
+            <div class="credits corpo">
+                Visita il nostro sito:<br>
+                <a class="sito-hdm corpo bold" href="https://www.h-dm.it/it/" target="blank">
             www.h-dm.it
             </a>
+            </div>
         </div>
-
         <div class="credits corpo">
             <span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
             <span style="font-weight: bold;">Data Visualization Designers:</span> Annalaura Cannavò, Alessia Musio
         </div>
-
     </div>
 
 
