--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             </div>
 
             <div class="corpo">
-                <br> Questa dashboard mostra l’andamento della campagna vaccinale in Italia, monitorando le vaccinazioni giornaliere, le categorie interessate, l’andamento a livello regionale e la tipologia di vaccini somministrati.<br>
-                <br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Consulta le fonti ufficiali →</a><br><br><br>
+                <br>Come sta andando la campagna vaccinale italiana? La risposta ve la raccontiamo con i numeri, grazie a grafici che vengono aggiornati tre volte a partire dai dati diffusi dal governo. Qui trovere quante vaccinazioni sono fatte giornalmente,
+                le categorie interessate, la situazione delle regioni e la tipologia di vaccini somministrati.<br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Da dove vengono i dati →</a><br><br><br>
                 <div class="sottotitolo">• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</div>
                 <br>
 
@@ -92,9 +92,8 @@
                         Quanti vaccini vengono fatti al giorno?
                     </a>
                 <div class="descrizione corpo">
-                    In questa scheda è possibile approfondire l'andamento delle somministrazioni giornaliere della prima e della seconda dose di vaccino e il tempo necessario al raggiungimento dell'immunità di gregge (70% della popolazione italiana: 42,25 Milioni). Il tempo
-                    stimato è calcolato sulla base della media mobile delle somministrazioni effettuate negli ultimi 7 giorni.
-                </div>
+                    Ecco quante dosi di vaccino sono state fatte in Italia quotidianamente: potete vedere il numero totale di somministrazione e notare la ripartizione per prima e seconda dose. Inoltre potete seguire l'andamento nel numero di dosi e richiami secondo una
+                    media mobile che considera il valore medio in una finestra di X giorni.</div>
 
                 <a class="bottone-off corpo bold" href="./categorie-vaccinate.html">
                         Quali categorie di persone sono già state vaccinate?
