--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -82,8 +82,8 @@
             </div>
 
             <div class="corpo">
-                <br> Questa dashboard mostra l’andamento della campagna vaccinale in Italia, monitorando le vaccinazioni giornaliere, le categorie interessate, l’andamento a livello regionale e la tipologia di vaccini somministrati.<br>
-                <br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Consulta le fonti ufficiali →</a><br><br><br>
+                <br>Come sta andando la campagna vaccinale italiana? La risposta ve la raccontiamo con i numeri, grazie a grafici che vengono aggiornati tre volte a partire dai dati diffusi dal governo. Qui trovere quante vaccinazioni sono fatte giornalmente,
+                le categorie interessate, la situazione delle regioni e la tipologia di vaccini somministrati.<br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Da dove vengono i dati →</a><br><br><br>
                 <div class="sottotitolo">• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</div>
                 <br>
 
@@ -95,7 +95,7 @@
                         Quali categorie di persone sono già state vaccinate?
                     </a>
                 <div class="descrizione corpo">
-                    La rappresentazione mostrano i volumi di somministrazione (prima e seconda dose) per sesso, fascia d’età e categorie, come previsto dal Piano vaccinazione anti Covid-19.</div>
+                    I grafici mostrano i volumi delle somministrazioni divisi per genere, età e categorie. In questo modo si può vedere in azione il piano vaccinale italiano.</div>
 
                 <a class="bottone-off corpo bold" href="./vaccinazioni-per-regione.html">
                         Quante persone sono state vaccinate in ogni regione?
