--- a/fornitori-vaccini.html
+++ b/fornitori-vaccini.html
@@ -82,8 +82,8 @@
             </div>
 
             <div class="corpo">
-                <br> Questa dashboard mostra l’andamento della campagna vaccinale in Italia, monitorando le vaccinazioni giornaliere, le categorie interessate, l’andamento a livello regionale e la tipologia di vaccini somministrati.<br>
-                <br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Consulta le fonti ufficiali →</a><br><br><br>
+                <br>Come sta andando la campagna vaccinale italiana? La risposta ve la raccontiamo con i numeri, grazie a grafici che vengono aggiornati tre volte a partire dai dati diffusi dal governo. Qui trovere quante vaccinazioni sono fatte giornalmente,
+                le categorie interessate, la situazione delle regioni e la tipologia di vaccini somministrati.<br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Da dove vengono i dati →</a><br><br><br>
                 <div class="sottotitolo">• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</div>
                 <br>
 
@@ -103,7 +103,7 @@
                         Quali sono i fornitori di vaccini?
                     </a>
                 <div class="descrizione corpo">
-                    Riepilogo delle dosi consegnate e somministrate e disponibili per ogni fornitore.</div>
+                    Ecco come stanno andando consegne e utilizzo delle dosi a seconda dei diversi vaccini.</div>
 
 
                 <div class="legenda">
