--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -83,7 +83,7 @@
 
             <div class="corpo">
                 <br>Come sta andando la campagna vaccinale italiana? La risposta ve la raccontiamo con i numeri, grazie a grafici che vengono aggiornati tre volte a partire dai dati diffusi dal governo. Qui trovere quante vaccinazioni sono fatte giornalmente,
-                le categorie interessate, la situazione delle regioni e la tipologia di vaccini somministrati.<br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Da dove vengono i dati →</a><br><br><br>
+                le categorie interessate, la situazione delle regioni e la tipologia di vaccini somministrati.<br><br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Da dove vengono i dati →</a><br><br><br>
                 <div class="sottotitolo">• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</div>
                 <br>
 
