--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <!-- JS -->
     <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/icons.js"></script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.0.min.js" type="text/javascript"></script>
@@ -163,6 +164,7 @@
 
     <!-- Optional JavaScript -->
     <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/icons.js"></script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
