--- a/vaccinazioni-per-regione.html
+++ b/vaccinazioni-per-regione.html
@@ -30,6 +30,7 @@
 
     <!-- JS -->
     <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/icons.js"></script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.0.min.js" type="text/javascript"></script>
@@ -100,72 +101,73 @@
                     </a>
                 <div class="descrizione corpo">
                     Nella mappa si può vedere la percentuale di copertura con la seconda dose nelle diverse regioni, le somministrazioni totali e la media a mobile a sette giorni.
-
-                    <a class="bottone-off corpo bold" href="./fornitori-vaccini.html">
+                </div>
+                <a class="bottone-off corpo bold" href="./fornitori-vaccini.html">
                         Quali sono i fornitori di vaccini?
                     </a>
 
-                    <div class="legenda">
-                        <div class="sottotitolo">• LEGENDA:</div>
-                        <div class="corpo"></div>Il colore indica la somministazione della
-                        <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> e della
-                        <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
-                    </div>
+                <div class="legenda">
+                    <div class="sottotitolo">• LEGENDA:</div>
+                    <div class="corpo"></div>Il colore indica la somministazione della
+                    <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> e della
+                    <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
                 </div>
-            </div>
-
-            <div class="col- dashboard">
-                <div class='tableauPlaceholder' id='viz1615221191278' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Regioni&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;Regioni' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Regioni&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
-                <script type='text/javascript'>
-                    var divElement = document.getElementById('viz1615221191278');
-                    var vizElement = divElement.getElementsByTagName('object')[0];
-                    if (divElement.offsetWidth > 1000) {
-                        vizElement.style.width = '100%';
-                        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-                    } else if (divElement.offsetWidth > 500) {
-                        vizElement.style.width = '100%';
-                        vizElement.style.height = (divElement.offsetWidth * 0.95) + 'px';
-                    } else {
-                        vizElement.style.width = '100%';
-                        vizElement.style.minHeight = '1840px';
-                        vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
-                    }
-                    var scriptElement = document.createElement('script');
-                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-                    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-                </script>
             </div>
         </div>
 
-        <div class="footer">
-            <div class="logo-sito">
-                <div class="logo-hdm">
-                    <a class="logo-hdm" href="https://www.h-dm.it/it/" target="blank">
-                        <img src="./assets/Logo_HDM.svg" alt="Logo">
-                    </a>
-                </div>
+        <div class="col- dashboard">
+            <div class='tableauPlaceholder' id='viz1615221191278' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Regioni&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;Regioni' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;Regioni&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
+            <script type='text/javascript'>
+                var divElement = document.getElementById('viz1615221191278');
+                var vizElement = divElement.getElementsByTagName('object')[0];
+                if (divElement.offsetWidth > 1000) {
+                    vizElement.style.width = '100%';
+                    vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                } else if (divElement.offsetWidth > 500) {
+                    vizElement.style.width = '100%';
+                    vizElement.style.height = (divElement.offsetWidth * 0.95) + 'px';
+                } else {
+                    vizElement.style.width = '100%';
+                    vizElement.style.minHeight = '1840px';
+                    vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
+                }
+                var scriptElement = document.createElement('script');
+                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                vizElement.parentNode.insertBefore(scriptElement, vizElement);
+            </script>
+        </div>
+    </div>
 
-                <div class="credits corpo">
-                    Visita il nostro sito:<br>
-                    <a class="sito-hdm corpo bold" href="https://www.h-dm.it/it/" target="blank">
+    <div class="footer">
+        <div class="logo-sito">
+            <div class="logo-hdm">
+                <a class="logo-hdm" href="https://www.h-dm.it/it/" target="blank">
+                    <img src="./assets/Logo_HDM.svg" alt="Logo">
+                </a>
+            </div>
+
+            <div class="credits corpo">
+                Visita il nostro sito:<br>
+                <a class="sito-hdm corpo bold" href="https://www.h-dm.it/it/" target="blank">
             www.h-dm.it
             </a>
-                </div>
-            </div>
-            <div class="credits corpo">
-                <span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
-                <span style="font-weight: bold;">Data Visualization Designers:</span> Annalaura Cannavò, Alessia Musio
             </div>
         </div>
+        <div class="credits corpo">
+            <span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
+            <span style="font-weight: bold;">Data Visualization Designers:</span> Annalaura Cannavò, Alessia Musio
+        </div>
+    </div>
 
 
-        <!-- Optional JavaScript -->
-        <script type="text/javascript" src="./js/main.js"></script>
+    <!-- Optional JavaScript -->
+    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/icons.js"></script>
 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
