--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             </div>
 
             <div class="corpo">
-                <br>Come sta andando la campagna vaccinale italiana? La risposta ve la raccontiamo con i numeri, grazie a grafici che vengono aggiornati tre volte al giorno a partire dai dati diffusi dal governo. Qui trovere quante vaccinazioni sono fatte
-                giornalmente, le categorie interessate, la situazione delle regioni e la tipologia di vaccini somministrati.<br><br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Da dove vengono i dati →</a><br><br><br>
+                <br>Come sta andando la campagna vaccinale italiana? La risposta ve la raccontiamo con i numeri, grazie a grafici che vengono aggiornati tre volte al giorno a partire dai dati diffusi dal governo. Qui troverete quante vaccinazioni sono
+                fatte giornalmente, le categorie interessate, la situazione delle regioni e la tipologia di vaccini somministrati.<br><br><a class="fonti corpo bold" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Da dove vengono i dati →</a><br><br><br>
                 <div class="sottotitolo">• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</div>
                 <br>
 
@@ -92,7 +92,7 @@
                         Quanti vaccini vengono fatti al giorno?
                     </a>
                 <div class="descrizione corpo">
-                    Ecco quante dosi di vaccino sono state fatte in Italia quotidianamente: potete vedere il numero totale di somministrazione e notare la ripartizione per prima e seconda dose. Inoltre potete seguire l'andamento nel numero di dosi e richiami secondo una
+                    Ecco quante dosi di vaccino sono state fatte in Italia quotidianamente: potete vedere il numero totale di somministrazioni e notare la ripartizione per prima e seconda dose. Inoltre potete seguire l'andamento nel numero di dosi e richiami secondo una
                     media mobile che considera il valore medio in una finestra di X giorni.</div>
 
                 <a class="bottone-off corpo bold" href="./categorie-vaccinate.html">
