--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         </div>
 
         <div class="col- dashboard">
-            <div class='tableauPlaceholder' id='viz1615218454077' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;DosiGiornaliere' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='no' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
+            <div class='tableauPlaceholder' id='viz1615568008533' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16155676329510&#47;DosiGiornaliere&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16155676329510&#47;DosiGiornaliere' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16155676329510&#47;DosiGiornaliere&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
             <script type='text/javascript'>
-                var divElement = document.getElementById('viz1615218454077');
+                var divElement = document.getElementById('viz1615568008533');
                 var vizElement = divElement.getElementsByTagName('object')[0];
                 if (divElement.offsetWidth > 1000) {
                     vizElement.style.width = '100%';
@@ -129,8 +129,7 @@
                     vizElement.style.height = (divElement.offsetWidth * 0.95) + 'px';
                 } else {
                     vizElement.style.width = '100%';
-                    vizElement.style.minHeight = '1590px';
-                    vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
+                    vizElement.style.height = '2023px';
                 }
                 var scriptElement = document.createElement('script');
                 scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
