--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -107,9 +107,9 @@
 
                 <div class="legenda">
                     <div class="sottotitolo">• LEGENDA:</div>
-                    <div class="corpo"></div>Il colore indica la somministazione della
-                    <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> e della
-                    <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
+                    <div class="corpo"></div>Il colore indica le somministrazioni totali effettuate per
+                    <span style="color:#FFFDF5; background-color:#566E3D; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">CATEGORIA</span> e
+                    <span style="color:#FFFDF5; background-color:#C13221; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">GENERE</span>
                 </div>
             </div>
         </div>
