--- a/fornitori-vaccini.html
+++ b/fornitori-vaccini.html
@@ -108,9 +108,10 @@
 
                 <div class="legenda">
                     <div class="sottotitolo">• LEGENDA:</div>
-                    <div class="corpo"></div>Il colore indica la somministazione della
-                    <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> e della
-                    <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
+                    <div class="corpo"></div>Il colore indica i diversi fornitori di vaccino:
+                    <span style="color:#FFFDF5; background-color:#BE4C6E; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PFIZER/BIONTECH</span>,
+                    <span style="color:#FFFDF5; background-color:#F47D70; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">ASTRAZENECA</span> e
+                    <span style="color:#FFFDF5; background-color:#A59ED9; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">MODERNA</span>
                 </div>
             </div>
         </div>
