--- a/categorie-vaccinate.html
+++ b/categorie-vaccinate.html
@@ -108,8 +108,8 @@
                 <div class="legenda">
                     <div class="sottotitolo">• LEGENDA:</div>
                     <div class="corpo"></div>Il colore indica le somministrazioni totali effettuate per
-                    <span style="color:#FFFDF5; background-color:#566E3D; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">CATEGORIA</span> e
-                    <span style="color:#FFFDF5; background-color:#C13221; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">GENERE</span>
+                    <span style="color:#FFFDF5; background-color:#6EA788; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">CATEGORIA</span> e
+                    <span style="color:#FFFDF5; background-color:#E65E5E; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">GENERE</span>
                 </div>
             </div>
         </div>
